fixed: url issue.

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: A Very Good Rabbit
 email: pincil@163.com
 description: > # this means to ignore newlines until "baseurl:"
   
-baseurl: "alenliang.github.io" # the subpath of your site, e.g. /blog/
-url: "http://" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://alenliang.github.io" # the base hostname & protocol for your site
 twitter_username: Liang Yilun
 github_username:  alenliang
 
